기본 기능들 구현

--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,8 @@
       "Noto Sans KR", "Malgun Gothic", sans-serif;
   }
 }
+
+img[data-loading="true"] {
+  opacity: 0.6;
+  filter: grayscale(0.2);
+}
