이미지 업로드 기능 구현

--- a/src/index.css
+++ b/src/index.css
@@ -143,3 +143,10 @@ img[data-loading="true"] {
   font-style: normal;
   font-display: swap;
 }
+
+.tiptap img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0.75rem 0;
+}
