--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,28 @@
       background-position: 0% 0%;
     }
   }
-}
+  --animate-shimmer-slide: shimmer-slide var(--speed) ease-in-out infinite alternate;
+  --animate-spin-around: spin-around calc(var(--speed) * 2) infinite linear
+;
+  @keyframes shimmer-slide {
+  to {
+    transform: translate(calc(100cqw - 100%), 0);
+    }
+  }
+  @keyframes spin-around {
+  0% {
+    transform: translateZ(0) rotate(0);
+    }
+  15%, 35% {
+    transform: translateZ(0) rotate(90deg);
+    }
+  65%, 85% {
+    transform: translateZ(0) rotate(270deg);
+    }
+  100% {
+    transform: translateZ(0) rotate(360deg);
+    }
+  }}
 
 :root {
   --radius: 0.625rem;
@@ -161,4 +182,18 @@ img[data-loading="true"] {
   height: auto;
   display: block;
   margin: 0.75rem 0;
+}
+
+@keyframes caret-blink {
+  0%,
+  40% {
+    opacity: 1;
+  }
+  50%,
+  100% {
+    opacity: 0;
+  }
+}
+.caret-blink {
+  animation: caret-blink 1.5s steps(1) infinite;
 }
