코드 블록 올리기 기능

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@import "highlight.js/styles/github-dark.css";
 
 ::view-transition-old(root),
 ::view-transition-new(root) {
@@ -57,28 +58,31 @@
       background-position: 0% 0%;
     }
   }
-  --animate-shimmer-slide: shimmer-slide var(--speed) ease-in-out infinite alternate;
-  --animate-spin-around: spin-around calc(var(--speed) * 2) infinite linear
-;
+  --animate-shimmer-slide: shimmer-slide var(--speed) ease-in-out infinite
+    alternate;
+  --animate-spin-around: spin-around calc(var(--speed) * 2) infinite linear;
   @keyframes shimmer-slide {
-  to {
-    transform: translate(calc(100cqw - 100%), 0);
+    to {
+      transform: translate(calc(100cqw - 100%), 0);
     }
   }
   @keyframes spin-around {
-  0% {
-    transform: translateZ(0) rotate(0);
+    0% {
+      transform: translateZ(0) rotate(0);
     }
-  15%, 35% {
-    transform: translateZ(0) rotate(90deg);
+    15%,
+    35% {
+      transform: translateZ(0) rotate(90deg);
     }
-  65%, 85% {
-    transform: translateZ(0) rotate(270deg);
+    65%,
+    85% {
+      transform: translateZ(0) rotate(270deg);
     }
-  100% {
-    transform: translateZ(0) rotate(360deg);
+    100% {
+      transform: translateZ(0) rotate(360deg);
     }
-  }}
+  }
+}
 
 :root {
   --radius: 0.625rem;
@@ -196,4 +200,22 @@ img[data-loading="true"] {
 }
 .caret-blink {
   animation: caret-blink 1.5s steps(1) infinite;
+}
+
+/* tiptap code line numbers (showLineNumbers=true 일 때) */
+.tiptap pre.tiptap-line-numbers {
+  counter-reset: line;
+}
+.tiptap pre.tiptap-line-numbers code > div,
+.tiptap pre.tiptap-line-numbers code > span {
+  counter-increment: line;
+}
+.tiptap pre.tiptap-line-numbers code > div::before,
+.tiptap pre.tiptap-line-numbers code > span::before {
+  content: counter(line);
+  display: inline-block;
+  width: 2.2em;
+  margin-right: 0.8em;
+  opacity: 0.35;
+  text-align: right;
 }
